# Claude-Defender

./: .gitignore  claudeDefender.py  hallfoffame.md  readme.md  vdp.md
claudeDefender-tauri/: index.html  package-lock.json  package.json
claudeDefender-tauri/src/: App.css  App.jsx  styles.css
claudeDefender-tauri/src-tauri/: Cargo.toml  tauri.conf.json
claudeDefender-tauri/src-tauri/icons/: icon.icns
claudeDefender-tauri/src-tauri/src/: main.rs
