[package]
name = "claude-defender"
version = "1.0.0"
description = "MCP protection overlay for Claude Desktop"
authors = ["2alf"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-autostart = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
md5 = "0.7"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
